manifests/production-default-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-production
  namespace: default
spec:
  type: ExternalName
  externalName: flask-service.production.svc.cluster.local
  ports:
    - port: 80
