manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: NodePort
  selector:
    app: flask        # matches the label on your pods
  ports:
    - port: 80        # service port
      targetPort: 5000 # pod port
      nodePort: 30080  # external port on the node
