manifests/staging-default-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-staging
  namespace: default
spec:
  type: ExternalName
  externalName: flask-service.staging.svc.cluster.local
  ports:
    - port: 80
