manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-staging
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /staging(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-production
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /production(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-service
                port:
                  number: 80
